login page changes

--- a/Geosemantic.Client/src/index.html
+++ b/Geosemantic.Client/src/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>Geosemantic Template</title>
+        <title>Geosemantic | Pilot</title>
         <base href="/">
 
         <meta charset="utf-8">
