Logo and newfeed changes

--- a/Geosemantic.Client/src/index.html
+++ b/Geosemantic.Client/src/index.html
@@ -189,9 +189,9 @@
 
             <div class="center">
 
-                <div class="logo">
-                    <img width="128" src="assets/images/logos/icon_react_bw_blue_100.png">
-                </div>
+                <!-- <div class="logo">
+                    <img width="128" src="assets/images/logos/logo.png">
+                </div> -->
 
                 <!-- Material Design Spinner -->
                 <div class="spinner-wrapper">
